<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calendar Widget</string>
    <string name="widget_name">Calendar Widget</string>
    <string name="widget_instance_name">Widget name</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="no_upcoming_events">No upcoming events</string>
    <string name="open_prefs_desc">Open the settings of the calendar widget</string>
    <string name="add_event_desc">Add new calender event</string>
    <string name="indicator_alarm">Indicator if an alarm has been set</string>
    <string name="indicator_recurring">Indicator if the event is recurring</string>
    <string name="no_title">(No title)</string>
    <string name="grant_permissions">Grant permissions</string>
    <string name="grant_permissions_verbose">Widget requires permission to read calendars.\nTap here to grant permission.</string>
    <string name="permissions_justification">Welcome to the Calendar Widget, the easy access to your calendar.\n\nTo make the most of the widget you need to grant it access to your calendar.</string>
    <string name="no_widgets_found">Please add a \"Calendar Widget\" widget from the home screen of your device first.</string>
    <string name="select_a_widget_to_configure">Select a widget to configure</string>
    <string name="close">Close</string>
    <string name="go_to_home_screen">Go to home screen</string>

    <!-- Preference header: Calendars -->
    <string name="calendars_prefs">Calendars</string>
    <string name="calendars_prefs_desc">Select the calendars to display</string>

    <!-- Preference header: Appearance -->
    <string name="appearance_prefs">Appearance</string>
    <string name="appearance_prefs_desc">Adjust the appearance of the widget</string>
    <string name="appearance_text_size_title">Text size</string>
    <string name="appearance_text_size_desc">Adjust the text size</string>
    <string name="appearance_text_size_very_small">Very small</string>
    <string name="appearance_text_size_small">Small</string>
    <string name="appearance_text_size_medium">Medium</string>
    <string name="appearance_text_size_large">Large</string>
    <string name="appearance_text_size_very_large">Very large</string>
    <string name="pref_event_entry_layout_title">Event entry layout</string>
    <string name="default_multiline_layout">Time below title</string>
    <string name="single_line_layout">All in one row</string>
    <string name="appearance_multiline_title_title">Multiline title</string>
    <string name="appearance_multiline_title_desc">Spread event title over multiple lines</string>
    <string name="appearance_date_format_desc">Show time in am/pm or 24 hours format</string>
    <string name="appearance_date_format_title">Date format</string>
    <string name="appearance_date_format_auto">Automatic</string>
    <string name="appearance_date_format_24">17:00</string>
    <string name="appearance_date_format_12">5:00 pm</string>
    <string name="appearance_show_days_without_events_title">Show days without events</string>
    <string name="appearance_show_days_without_events_desc">Show day headers for days without events</string>
    <string name="appearance_show_day_headers_title">Show day headers</string>
    <string name="appearance_show_day_headers_desc">Show day headers at all</string>
    <string name="appearance_display_header_title">Show widget header</string>
    <string name="appearance_display_header_desc">Show the date and settings header</string>
    <string name="lock_time_zone_off_desc">Unlocked, current zone: %s</string>
    <string name="lock_time_zone_on_desc">Locked at %s</string>
    <string name="lock_time_zone_title">Lock time zone</string>
    <string name="appearance_group_color_title">Colors</string>
    <string name="appearance_group_event_background_override_title">Event Background Override</string>
    <string name="appearance_background_color_title">Background color</string>
    <string name="appearance_background_event_color_override_opacity_title">Opacity</string>
    <string name="appearance_background_event_color_override_opacity_desc">Adjust opacity of event background color override</string>
    <string name="appearance_background_event_color_override_title">Event Background Color Override</string>
    <string name="appearance_background_event_color_override">Set calendar color as event background</string>
    <string name="appearance_background_color_desc">Adjust the color of the background</string>
    <string name="appearance_past_events_background_color_title">Past events background color</string>
    <string name="appearance_past_events_background_color_desc">Adjust background color of past events</string>
    <string name="appearance_day_header_alignment_desc">Set the alignment of the day header</string>
    <string name="appearance_day_header_alignment_title">Day header alignment</string>
    <string name="appearance_day_header_alignment_left">Left</string>
    <string name="appearance_day_header_alignment_center">Center</string>
    <string name="appearance_day_header_alignment_right">Right</string>
    <string name="appearance_day_header_alignment_left_of_event">Left Of Event</string>
    <string name="appearance_header_theme_title">Widget header shading</string>
    <string name="appearance_header_theme_desc">Show the header of the widget in dark or light shade</string>
    <string name="appearance_entries_theme_title">Event shading</string>
    <string name="appearance_entries_theme_desc">Show event text in dark or light shade</string>
    <string name="appearance_theme_black">White</string>
    <string name="appearance_theme_dark">Light</string>
    <string name="appearance_theme_light">Dark</string>
    <string name="appearance_theme_white">Black</string>
    <string name="appearance_abbreviate_dates_title">Abbreviate dates</string>
    <string name="appearance_abbreviate_dates_desc">Use three-letter format for dates in Widget and Day headers etc.</string>

    <!-- Preference header: Event details -->
    <string name="event_details_prefs">Event details</string>
    <string name="event_details_prefs_desc">Configure what details to show for an event</string>
    <string name="event_details_show_end_time_title">End time</string>
    <string name="event_details_show_end_time_desc">Show the event ending time</string>
    <string name="event_details_show_location_title">Show location</string>
    <string name="event_details_show_location_desc">Show or hide event location</string>
    <string name="event_details_fill_all_day_events_title">Fill all day events</string>
    <string name="event_details_fill_all_day_events_desc">Show an entry for each day of an all day event</string>
    <string name="event_details_indicators">Indicators</string>
    <string name="event_details_indicate_alert_desc">Show indicator for alerts</string>
    <string name="event_details_indicate_alert_title">Alerts</string>
    <string name="event_details_indicate_recurring_desc">Show indicator for recurring events</string>
    <string name="event_details_indicate_recurring_title">Recurring events</string>

    <!-- Preference header: Event filters -->
    <string name="event_filters_prefs">Event filters</string>
    <string name="event_filters_prefs_desc">Which current, future and past events to show</string>
    <string name="all_events">All events</string>
    <string name="current_and_future_events">Current and future events</string>
    <string name="past_events">Past events</string>
    <string name="event_details_event_range_title">Date range</string>
    <string name="event_details_event_range_desc">Configure the number of events to display</string>
    <string name="event_range_today">Today</string>
    <string name="event_range_one_day">One day</string>
    <string name="event_range_one_week">One week</string>
    <string name="event_range_two_weeks">Two weeks</string>
    <string name="event_range_one_month">One month</string>
    <string name="event_range_two_months">Two months</string>
    <string name="event_range_three_months">Three months</string>
    <string name="event_range_six_months">Six months</string>
    <string name="event_range_one_year">One year</string>
    <string name="show_past_events_with_default_color_title">Show all past events having default color</string>
    <string name="this_option_is_turned_off">(disabled)</string>
    <string name="pref_events_ended_title">Show events that ended recently</string>
    <string name="ended_one_hour_ago">Ended one hour ago</string>
    <string name="ended_two_hours_ago">Ended two hours ago</string>
    <string name="ended_four_hours_ago">Ended four hours ago</string>
    <string name="ended_today">Ended today</string>
    <string name="ended_yesterday">Ended yesterday</string>
    <string name="pref_hide_based_on_keywords_title">Hide based on keywords in a title</string>
    <string name="show_only_closest_instance_of_recurring_event">Show only the closest instance of a recurring event</string>

    <!-- Preference header: Feedback -->
    <string name="feedback_prefs">Feedback</string>
    <string name="feedback_prefs_desc">Get in touch with us</string>
    <string name="feedback_github_desc">Provide feedback on the project page</string>
    <string name="feedback_github_title">Visit widget on Github</string>
    <string name="feedback_play_store_desc">Rate and comment on Google Play Store</string>
    <string name="feedback_play_store_title">Visit widget on Google Play Store</string>
    <string name="refresh_desc">Refresh</string>
    <string name="share_events_for_debugging_desc">Create a report to help developers troubleshoot problems</string>
    <string name="share_events_for_debugging_title">Share events for debugging</string>

</resources>
