<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <ListPreference
        android:defaultValue="1.0"
        android:entries="@array/pref_text_size_entries"
        android:entryValues="@array/pref_text_size_values"
        android:key="textSizeScale"
        android:summary="@string/appearance_text_size_desc"
        android:title="@string/appearance_text_size_title" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="multiline_title"
        android:summary="@string/appearance_multiline_title_desc"
        android:title="@string/appearance_multiline_title_title" >
    </CheckBoxPreference>

    <ListPreference
        android:defaultValue="auto"
        android:entries="@array/pref_date_format_entries"
        android:entryValues="@array/pref_date_format_values"
        android:key="dateFormat"
        android:summary="@string/appearance_date_format_desc"
        android:title="@string/appearance_date_format_title" />


    <CheckBoxPreference
        android:defaultValue="true"
        android:key="showHeader"
        android:summary="@string/appearance_display_header_desc"
        android:title="@string/appearance_display_header_title" >
    </CheckBoxPreference>

    <Preference
        android:defaultValue="3187671040"
        android:key="backgroundColor"
        android:summary="@string/appearance_background_color_desc"
        android:title="@string/appearance_background_color_title" />

    <ListPreference
        android:defaultValue="DARK"
        android:entries="@array/pref_entry_theme_entries"
        android:entryValues="@array/pref_entry_theme_values"
        android:key="entryTheme"
        android:summary="@string/appearance_entries_theme_desc"
        android:title="@string/appearance_entries_theme_title" />

</PreferenceScreen>
