<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:key="feedbackGithub"
        android:summary="@string/feedback_github_desc"
        android:title="@string/feedback_github_title"
        android:persistent="false">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://github.com/plusonelabs/calendar-widget" />
    </Preference>
    <Preference
        android:key="feedbackPlayStore"
        android:summary="@string/feedback_play_store_desc"
        android:title="@string/feedback_play_store_title"
        android:persistent="false">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://play.google.com/store/apps/details?id=com.plusonelabs.calendar" />
    </Preference>
    <Preference
        android:key="shareEventsForDebugging"
        android:summary="@string/share_events_for_debugging_desc"
        android:title="@string/share_events_for_debugging_title"
        android:persistent="false" />
</PreferenceScreen>