<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.plusonelabs.calendar.MainActivity">

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Menu"
        android:layout_marginBottom="@dimen/calender_padding"
        tools:text="@string/permissions_justification"/>

    <ListView
        android:id="@android:id/list"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:scrollbars="vertical"/>

    <LinearLayout
        android:id="@+id/buttons"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/grant_permissions"
            android:text="@string/grant_permissions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="grantPermissions"/>

        <Button
            android:id="@+id/go_to_home_screen_button"
            android:text="@string/go_to_home_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onHomeButtonClick"/>
    </LinearLayout>

</LinearLayout>
